fix header on mobile

--- a/nicepage.css
+++ b/nicepage.css
@@ -35943,7 +35943,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-header .u-text-1 {
     margin-top: -55px;
-    margin-right: 194px;
+    margin-right: 170px;
     margin-left: 0;
   }
 
